--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "https://shokigorek.github.io/mesto/\r ### технологии\r html,\r css,\r js.\r ### функционал\r Адаптивность,\r Редактирования профиля,\r Добавление своих фото,\r Удаление фотографий,\r увеличение фотографий.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf dist && webpack --mode production",
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,16 @@
   "bugs": {
     "url": "https://github.com/ShockIgorek/mesto/issues"
   },
-  "homepage": "https://github.com/ShockIgorek/mesto#readme"
+  "homepage": "https://github.com/ShockIgorek/mesto#readme",
+  "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "babel-loader": "^8.2.3",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
+  },
+  "dependencies": {
+    "core-js": "^3.19.1"
+  }
 }
